Fix full-width images margin on small screens

--- a/styles/mixins/article-image-full-width.scss
+++ b/styles/mixins/article-image-full-width.scss
@@ -3,7 +3,7 @@
     max-width: 100vw;
     max-height: 100vh;
     object-fit: cover;
-    margin-left: calc((#{$breakpoint-middle} - 100vw) / 2 - #{$container-padding}) !important;
+    margin-left: calc((#{$breakpoint-middle} - 100vw) / 2 - #{$container-padding});// !important;
 
     @media (max-width: $breakpoint-middle) {
       margin-left: -$container-padding-middle;
